# NfcPost

./: BlinkOk.c  BlinkOk.h  CMakeCache.txt  CMakeLists.txt  GetJsonNow.c  GetJsonNow.h  GetSerial.c  GetSerial.h  LogTap.c  LogTap.h  Makefile  Mifare.c  Mifare.h  NfcPost  README.md  TapPost.c  TapPost.h  cmake_install.cmake  main.c  rpi-gpio.h  timeStrNow.c  timeStrNow.h
